--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "@raloliver",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.14.1",
     "consign": "^0.1.2",
     "express": "^4.13.3"
   }
